# dsa

Avl tree/: Avl3.cpp
Avl tree/newAvl/: AVLTree.cpp  AVLTree.h  CMakeLists.txt  StudentInsert.cpp  StudentInsert.h  StudentRemover.cpp  StudentRemover.h  StudentSearcher.cpp  StudentSearcher.h  main.cpp
Fasl_1/: soal_1.cpp  soal_10.cpp  soal_11.cpp  soal_13.cpp  soal_15.cpp  soal_16.cpp  soal_17.cpp  soal_19.cpp  soal_2.cpp  soal_3.cpp  soal_4.cpp  soal_5.cpp  soal_6.cpp  soal_7.cpp  soal_8.cpp  soal_9.cpp
Fasl_3/: 1.cpp  2.cpp  4.cpp  5.cpp  6.cpp  7.cpp  bigNumber.cpp
Fasl_4/: 1.cpp  2.cpp
Fasl_5/: 11.cpp  12.cpp  2.cpp  8.cpp
Fasl_7/: 1.cpp  10.cpp  2.cpp  3.cpp  5.cpp  6.cpp  8.cpp  9.cpp
extera/: 2
infix to prefix and postfix/: CMakeLists.txt  main.cpp
